<resources>

    <string name="app_name">EveryUse</string>
    <string name="title_top">Top</string>
    <string name="title_feed">Feed</string>
    <string name="title_recent">Recent</string>
    <string name="title_category">Category</string>
    <string name="title_my">My Use</string>
    <string name="title_activity_index">EveryUse</string>
    <string name="title_activity_register">Create a new account</string>
    <string name="title_activity_main">EveryUse</string>
    <string name="title_activity_create">Create a use</string>
    <string name="title_activity_search">Search use case</string>
    <string name="empty_text">&lt;empty&gt;</string>

    <!-- menus -->
    <string name="menu_create">Create Use</string>
    <string name="menu_search">Search</string>
    <string name="menu_new">Add new item</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_discard">Delete</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="menu_shared">Uses I Shared</string>
    <string name="menu_commented">Uses I Commented</string>
    <string name="menu_scraped">Scraped uses</string>
    <string name="menu_following">Following</string>
    <string name="menu_follower">Follower</string>

    <!-- UI components -->
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_signup_done">Sign Up</string>
    <string name="btn_create">Create</string>
    <string name="btn_create_use">Create use of</string>
    <string name="btn_from_camera">Camera</string>
    <string name="btn_from_gallery">Gallery</string>
    <string name="btn_similar_item">I have similar case with this item</string>
    <string name="btn_similar_purpose">I have similar case with this purpose</string>
    <string name="tv_sorted_by">Sorted by</string>
    <string name="tv_photo">Add picture</string>
    <string name="tv_username">USERNAME</string>
    <string name="tv_email">EMAIL</string>
    <string name="tv_password">PASSWORD</string>
    <string name="tv_password_confirm">CONFIRM PASSWORD</string>
    <string name="tv_user_group">USER GROUP</string>
    <string name="tv_item">I used this item</string>
    <string name="tv_purpose">for this action</string>
    <string name="tv_place">At this place (optional)</string>
    <string name="tv_no_data">No data</string>
    <string name="tv_comment">COMMENTS</string>
    <string name="tv_header_signup">Sign Up</string>
    <string name="tv_no_result">no result</string>
    <string name="hint_search">Search use cases</string>
    <string name="hint_email">Your email</string>
    <string name="hint_username">Your username</string>
    <string name="hint_password">Your password</string>
    <string name="hint_password_again">Confirm your password</string>
    <string name="iv_desc_profile_photo">Profile Photo</string>
    <string name="iv_desc_usecase_photo">UseCase Image</string>
    <string name="iv_desc_usecase_thumbnail">UseCase Thumbnail</string>

    <!-- messages -->
    <string name="msg_logout_prompt">Logout from the app?</string>
    <string name="msg_logout_success">Logout successful</string>
    <string name="msg_wait">Please wait</string>
    <string name="msg_no_result">No result</string>
    <string name="msg_no_response">No response from the server</string>
    <string name="msg_fail_interpret_response">Failed to interpret server response (Check whether the server is down).</string>
    <string name="msg_delete_success">Successfully deleted the item</string>
    <string name="msg_delete_fail">Failed to deleted the item</string>
    <string name="msg_register_prompt">Register new account?</string>
    <string name="msg_register_success">New account successfully created!</string>
    <string name="msg_register_fail">Failed to register new account!</string>
    <string name="msg_turn_on_network">You should be connected to the network. Will you move to the Wifi settings page?</string>
    <string name="msg_complete_form">Please complete the form</string>
    <string name="msg_login_success">Login Successful!</string>
    <string name="msg_create_success">Successfully created!</string>
    <string name="msg_data_load_fail">Failed to load remote data</string>
    <string name="msg_data_parse_fail">Failed to parse remote data</string>
    <string name="msg_missing_data">Data is missing!</string>
    <string name="msg_missing_data_url">Data URL is missing!</string>
    <string name="msg_missing_option_array">Sort option array is not provided!</string>
    <string name="msg_missing_option_value">Sort option array is not provided!</string>
    <string name="msg_missing_use_case_id">UseCase id is not provided!</string>
    <string name="msg_wrong_user_id">user_id must be bigger than 0!</string>
    <string name="msg_user_session_invalid">User session is invalid!</string>
    <string name="msg_intent_parameter_not_set">Required intent parameter is not set!</string>
    <string name="msg_fail_create_temp_file">Failed to create temp file</string>
    <string name="msg_finish_app">Finishing the application</string>
    <string name="msg_discard">Do you want to delete this?</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_no">No</string>

    <!-- preferences -->
    <string name="pref_title_user_group">User Group</string>
    <string name="pref_category_user_group">User Group</string>
    <string name="pref_dialog_user_group">Select the group</string>
    <string name="pref_summary_user_group">Select your user group</string>

</resources>