<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchWidth"
    android:orientation="vertical" >

    <TextView
        style="@style/MatchWidth"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/ThemePink" />

    <LinearLayout
        style="@style/Wrap"
        android:layout_gravity="center_vertical"
        android:background="@color/ThemeOrange"
        android:orientation="vertical" >

        <!-- Header -->

        <TextView
            style="@style/MatchWidth"
            android:gravity="center"
            android:text="@string/tv_header_signup"
            android:textColor="@color/white" />

        <!-- email -->

        <TextView
            style="@style/MatchWidth"
            android:text="@string/tv_email" />

        <EditText
            android:id="@+id/et_email"
            style="@style/MatchWidth"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <!-- username -->

        <TextView
            style="@style/MatchWidth"
            android:text="@string/tv_username" />

        <EditText
            android:id="@+id/et_username"
            style="@style/MatchWidth"
            android:hint="@string/hint_username"
            android:inputType="text" />

        <!-- password -->

        <TextView
            style="@style/MatchWidth"
            android:text="@string/tv_password" />

        <EditText
            android:id="@+id/et_password"
            style="@style/MatchWidth"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <!-- password confirmation -->

        <TextView
            style="@style/MatchWidth"
            android:text="@string/tv_password_confirm" />

        <EditText
            android:id="@+id/et_password_confirm"
            style="@style/MatchWidth"
            android:hint="@string/hint_password_again"
            android:inputType="textPassword" />
    </LinearLayout>

    <!-- register button -->

    <Button
        android:id="@+id/btn_register_done"
        style="@style/MatchWidth"
        android:text="@string/btn_signup_done" />

</LinearLayout>