<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_new"
        android:icon="@drawable/ic_content_new_light"
        android:showAsAction="always"
        android:title="@string/menu_new"/>
    <!--
    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_search"/>
    -->
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="collapseActionView"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_logout"
        android:showAsAction="collapseActionView"
        android:title="@string/menu_logout"/>
    <item
        android:id="@+id/menu_about"
        android:showAsAction="collapseActionView"
        android:title="@string/menu_about"/>

</menu>