<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tv_item" />

        <EditText
            android:id="@+id/text_item"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tv_purpose" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/spinner_purpose"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <EditText
                android:id="@+id/text_purpose"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_picture" />

        <ImageView
            android:id="@+id/view_photo"
            style="@style/PictureStyle.Preview"
            contentDescription="Picture to add" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_create" />
    </LinearLayout>

</ScrollView>